# multi_sensor_calibration

./: .clangd  AGENTS.md  pyproject.toml
common/: CMakeLists.txt
docker/ros1/: Dockerfile  build_docker.sh  build_workspace.sh  run_docker.sh
optimization/: CMakeLists.txt  package.xml  setup.py
optimization/src/: main.py  server.py
