<?xml version="1.0"?>
<package format="2">
    <name>optimization</name>
    <version>0.0.0</version>
    <description>The optimization package</description>

    <maintainer email="j.f.m.domhof@tudelft.nl">jfmdomhof</maintainer>

    <license>GPLv3</license>

    <build_depend>message_generation</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>accumulator</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>accumulator</exec_depend>
    <exec_depend>ros_numpy</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>
